# MailPilot

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GETTING_STARTED.md  PRIVACY.md  README.de.md  README.md  ROADMAP.md  SECURITY.md  SKELETON.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.sqlx/: query-11d91a357c89e2ac0c355e316bdd9c0dfce441d55f1024b0ec225072a16757b1.json  query-12f0a8b00b911ce2ed60dcbd4015043def033fb4623fbf7ed256ae5f69ca0dad.json  query-14390b27d049c7fb15dbb874ebc3faf889f8871e6371d186fafa1e9355479393.json  query-1c9e75bf607365239f11c9717d6ccb7cc8205e64582f717f53af065ad5197a58.json  query-29cffa3f6ac73d157d7337ce161a978a31a7182253623eb5afa70fc6a15e0ae9.json  query-2eb80309c1fbc2e92f038f0fde25a8b0605a9fbbe1c1424e3a03dbc06735d7d0.json  query-348be34936825e8040cece32a9dced752ed68e8e0122467d0d0ab9938aac5689.json  query-35239060de93b1a85cfca221d8286aa85993b852d7288dc26324c3e4cbec3850.json  query-3bbd9cb772d3857146b14ad59e4ef8b2468f694f6c97994dfe15ca9e5d190163.json  query-4991312c04074ea95261a14b23012192c8d3c49af95a5ec1c2dbca124544a6cb.json  query-4f1da266b182da36192d35415a906856c75642777093032efe4dd23d4fa856b7.json  query-66d54b51acb2b1670efb165dafe8ae3edd10fe9dec55880b1c67039950bb9636.json  query-67a3e8f44584b1fada166dc7eb14893820fea6f7fc62c868e49be9034c4c5df1.json  query-68e8e4c9a1e1ae87bcde915b0d6ff21393b6358aefc3a0e93cf07de979ea0982.json  query-69fb3c71703167d3f975291a3a8249c947d2a974f862f908f204e2db2a517850.json  query-7152462b3a4362208fce60cc58670b1ada8202764cdf46cd0135e2329d6423f6.json  query-74b9c398cd75a94b96d01c95cd9dd787db1a7dc5667d6997af8a5645c3f4bcaa.json  query-78d415f6740101e25b90d73b877e1e110d9509ca4686ab431edaa36e5cd5266f.json  query-8de8a7d15a9b4ec171684776c25e7a42f6b02a88466b83a082e5c9fb50fe7b75.json  query-9c95eff2ccb605b4e8067b6e83a3adc3a34f0f7a6e66b13c973b2afc45508ae6.json  query-9e522626d28158335b2de51d8ce57ef9d36a7a9847a6a55326a1ec5915fd99e5.json  query-a01327c9121eeca1fbaeb365d93e684e604ee795cbc75d71fb212104ba6e2b48.json  query-a139103721c444e72f4e2bba5bfd7ccfec40c0e813607372872c63e8979c0854.json  query-a81a0b529dce8230a5c424fdfa6f8d60ee8a70661ffbd31a738f5b77b2638e4e.json  query-aaa323a2217ea0ec17875f41ab823c92bfc1cade22f9d59c810dba8f8af2d3c5.json  query-b382be03dbfde11576e277b5eb5c963918732e5c26ea53f383bf56dd47da13a6.json  query-b5c2e74a2afadeac0e652f8d4dc7294647358775e96e6f954bb16b295aaad12d.json  query-cae98979c69d0b6a166c38bdccb1d392c8604324917c122965af0d3d1cec2983.json  query-d4a9a4f070afd9e61eec8e3ff00ee4c6e0aaefc1b35028f82c49f6f7b201994a.json  query-e12abb0c65e372709bbb3158f937a911c31e122d40455bb4d372a482f2d89917.json  (+1 more)
crates/mp-core/: Cargo.toml
crates/mp-core/src/: lib.rs
crates/mp-core/src/ai/: claude.rs  mod.rs  ollama.rs  prompts.rs
crates/mp-core/src/classifier/: mod.rs  rules.rs  thread.rs
crates/mp-core/src/db/: mod.rs  queries.rs
crates/mp-core/src/db/migrations/: 0001_accounts.sql  0002_emails.sql  0003_actions.sql
crates/mp-core/src/extractor/: calendar.rs  invoice.rs  mod.rs  subscription.rs  tracking.rs
crates/mp-core/src/imap_client/: account_manager.rs  mod.rs
crates/mp-core/src/models/: account.rs  action.rs  classification.rs  email_entry.rs  extracted.rs  filter_rule.rs  mod.rs
crates/mp-core/src/search/: mod.rs
crates/mp-core/tests/: classification_integration.rs
frontend/: index.html  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  main.rs  state.rs
src-tauri/src/commands/: accounts.rs  actions.rs  classify.rs  emails.rs  mod.rs  settings.rs  stats.rs
(+19 files in other folders)
