[workspace]
resolver = "2"
members  = ["crates/mp-core", "crates/mp-cli", "src-tauri"]

[workspace.package]
version = "0.2.1"
edition = "2021"

[workspace.dependencies]
serde        = { version = "1",    features = ["derive"] }
serde_json   = "1"
tokio        = { version = "1",    features = ["full"] }
reqwest      = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
chrono       = { version = "0.4",  features = ["serde"] }
uuid         = { version = "1",    features = ["v4", "serde"] }
thiserror    = "1"
anyhow       = "1"
tracing      = "0.1"
async-trait  = "0.1"
