[package]
name    = "mailpilot"
version.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2", features = [] }
tauri-plugin-dialog        = "2"
tauri-plugin-shell         = "2"
serde.workspace            = true
serde_json.workspace       = true
tokio.workspace            = true
thiserror.workspace        = true
anyhow.workspace           = true
tracing.workspace          = true
uuid.workspace             = true
chrono.workspace           = true
mp-core                    = { path = "../crates/mp-core" }
sqlx                       = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
