[package]
name    = "mp-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace       = true
serde_json.workspace  = true
tokio.workspace       = true
reqwest.workspace     = true
chrono.workspace      = true
uuid.workspace        = true
thiserror.workspace   = true
anyhow.workspace      = true
tracing.workspace     = true
async-trait.workspace = true

imap       = "3.0.0-alpha.15"
mailparse  = "0.15"
base64     = "0.22"
regex      = "1"
rayon      = "1"
blake3     = "1"
once_cell  = "1"
sqlx       = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono", "uuid", "migrate"] }
